Hadoop MapReduce Change Log

Trunk (unreleased changes)

  MAPREDUCE-279

    MAPREDUCE-2839. Fixed TokenCache to get delegation tokens using both new
    and old apis. (Siddharth Seth via acmurthy)

    MAPREDUCE-2639. Bug fixes in speculate.DataStatistics. (Josh Wills via
    acmurthy)

    MAPREDUCE-2808. pull MAPREDUCE-2797 into mr279 branch (thomas graves via mahadev)

    Fixed CS locality wait factor. (acmurthy)

    MAPREDUCE-2781. mr279 RM application finishtime not set 
    (thomas graves via mahadev)
    
    MAPREDUCE-2706. Log job submission failures. (Jeffrey Naisbitt via
    acmurthy) 
    
    MAPREDUCE-2782. Unit tests for CapacityScheduler. (acmurthy) 
    
    Fix for running ant targets to use the right set of common/test jars 
    (gkesavan via mahadev)
    
    Patch for findbugs warnings in Resource Manager (siddharth seth via mahadev)
    
    Fix ivy conf to work with the hadoop common trunk maven build changes.
    (Giridharan Kesavan)
    
    Fix the poms to enable 0.23 snapshots for hdfs/common from apache 
    nightly builds (gkesavan)
 
    Fix findbugs warnings in mr-client modules part 3 (mahadev)

    Fix findbugs warnings in mr-client modules part 2 (mahadev)
 
    Fix findbugs warnings in mr-client modules, part 1  (mahadev) 
  
    MAPREDUCE-2776. Fix some of the yarn findbug warnings. (siddharth 
    seth via mahadev)

    Fix NPE in FifoScheduler. (mahadev)

    Harmonize slf4j versions. (llu)

    MAPREDUCE-2772. Fix MR-279 build after common mavenization, part 2.
    (Thomas Graves via llu)

    MAPREDUCE-2772. Fix MR-279 build after common mavenization.
    (Robert Joseph Evans via llu)

    MAPREDUCE-2773. server.api.records.NodeHealthStatus renamed but 
    not updated in client NodeHealthStatus.java (Thomas Graves via mahadev)
 
    Refactor/Cleanup yarn ResourceManager for managing state via
    state-machines and making most of the component interactions as
    asynchronous. (vinodkv, sharad and acmurthy)
