@@ -4,6 +4,9 @@ Trunk (unreleased changes)
 
   MAPREDUCE-279
 
+    MAPREDUCE-2727. Fix divide-by-zero error in SleepJob for sleepCount equals
+    0. (Jeffrey Naisbitt via acmurthy)
+
     MAPREDUCE-2839. Fixed TokenCache to get delegation tokens using both new
     and old apis. (Siddharth Seth via acmurthy)
 
